--- a/src/IIW_UDP_GBN.cbp
+++ b/src/IIW_UDP_GBN.cbp
@@ -17,38 +17,89 @@
 					<Add option="-g" />
 				</Compiler>
 			</Target>
-			<Target title="Release">
-				<Option output="bin/Release/IIW_UDP_GBN" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+			<Target title="Test">
+				<Option output="bin/Test/IIW_UDP_GBN" prefix_auto="1" extension_auto="1" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-O2" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="../README.md" />
-		<Unit filename="logic/gbn.c">
+		<Unit filename="../README.md">
+			<Option target="Debug" />
+		</Unit>
+		<Unit filename="Makefile">
+			<Option target="Debug" />
+		</Unit>
+		<Unit filename="logic/dataStructures/hTable.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="logic/gbn.h" />
-		<Unit filename="logic/logger.c">
+		<Unit filename="logic/dataStructures/hTable.h" />
+		<Unit filename="logic/dataStructures/ll.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="logic/logger.h" />
+		<Unit filename="logic/dataStructures/ll.h" />
+		<Unit filename="logic/gbn/gbn.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/gbn.h">
+			<Option compile="1" />
+			<Option link="1" />
+		</Unit>
+		<Unit filename="logic/gbn/launchBattery.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/launchBattery.h" />
+		<Unit filename="logic/gbn/launcher.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/launcher.h" />
+		<Unit filename="logic/gbn/networkSampler.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/networkSampler.h" />
+		<Unit filename="logic/gbn/packet.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/packet.h" />
+		<Unit filename="logic/gbn/sendTable.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/sendTable.h" />
+		<Unit filename="logic/gbn/sendWindow.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/gbn/sendWindow.h" />
+		<Unit filename="logic/logger/logger.h" />
 		<Unit filename="logic/main.c">
 			<Option compilerVar="CC" />
+			<Option target="Debug" />
+		</Unit>
+		<Unit filename="logic/rtSignals/rtSignalChecker.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="logic/rtSignals/rtSignalsChecker.h" />
+		<Unit filename="test/testLauncher.c">
+			<Option compilerVar="CC" />
+			<Option target="Debug" />
 		</Unit>
 		<Unit filename="test/testPacketize.c">
 			<Option compilerVar="CC" />
+			<Option target="Debug" />
 		</Unit>
-		<Unit filename="test/testSuites.h" />
+		<Unit filename="test/testSendMessageGbn" />
+		<Unit filename="test/testSendMessageGbn.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="test/testSerialize.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="test/testSuites.h">
+			<Option compile="1" />
+			<Option link="1" />
+			<Option target="Debug" />
+		</Unit>
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
