--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ EXEC_DIR=bin
 CC=gcc
 FLAGS=-g -Wall -Wextra
 LIBS=-lpthread
+DEFINE=-DTIMEOUT_CONST	# comment if you want adaptive
 INCLUDE=-I./logic
 OUT_DEBUG_DIR=$(EXEC_DIR)/Debug
 OUT_TEST_DIR=$(EXEC_DIR)/Test
@@ -13,8 +14,8 @@ TEST=$(filter-out ./logic/main.c, $(LOGIC)) $(shell find ./test -name "*.c")
 
 Debug: $(LOGIC)
 	mkdir -p $(OUT_DEBUG_DIR)
-	$(CC) $(FLAGS) $(INCLUDE) $(LIBS) $(LOGIC) -o $(OUT_DEBUG)
+	$(CC) $(FLAGS) $(INCLUDE) $(DEFINE) $(LIBS) $(LOGIC) -o $(OUT_DEBUG)
 
 Test: $(TEST)
 	mkdir -p $(OUT_TEST_DIR)
-	$(CC) $(FLAGS) $(INCLUDE) $(LIBS) $(TEST) -o $(OUT_TEST)
+	$(CC) $(FLAGS) $(INCLUDE) $(DEFINE) $(LIBS) $(TEST) -o $(OUT_TEST)
