--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ EXEC_DIR=bin
 CC=gcc
 FLAGS=-g -Wall -Wextra
 LIBS=-lpthread -lm
-DEFINE=-DTIMEOUT_ADAPTIVE# if not specified, a default constant timeout will be used
+DEFINE=#-DTIMEOUT_ADAPTIVE# if not specified, a default constant timeout will be used
 INCLUDE=-I./logic
 OUT_DEBUG_DIR=$(EXEC_DIR)/Debug
 OUT_TEST_DIR=$(EXEC_DIR)/Test
