--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,10 @@ LOGIC_DIR=./logic
 TEST_DIR=./test
 INCLUDE=-I$(LOGIC_DIR)
 OUT_DEBUG_DIR=$(EXEC_DIR)/Debug
-OUT_DEBUG_CLIENT=$(OUT_DEBUG_DIR)/client
-OUT_DEBUG_SERVER=$(OUT_DEBUG_DIR)/server
+OUT_DEBUG_DIR_CLIENT=$(OUT_DEBUG_DIR)/client
+OUT_DEBUG_DIR_SERVER=$(OUT_DEBUG_DIR)/server
+OUT_DEBUG_CLIENT=$(OUT_DEBUG_DIR_CLIENT)/client
+OUT_DEBUG_SERVER=$(OUT_DEBUG_DIR_SERVER)/server
 OUT_TEST_DIR=$(EXEC_DIR)/Test
 OUT_TEST=$(OUT_TEST_DIR)/$(PROJECT_NAME)_TestCommon
 OUT_TEST_CLIENT=$(OUT_TEST_DIR)/$(PROJECT_NAME)_TestClient
@@ -38,11 +40,11 @@ testServer: $(TEST_SERVER)
 testClientAndServer: TestClient TestServer
 
 client: $(LOGIC_CLIENT)
-	mkdir -p $(OUT_DEBUG_DIR)
+	mkdir -p $(OUT_DEBUG_DIR_CLIENT)
 	$(CC) $(FLAGS) $(INCLUDE) $(DEFINE) $(LOGIC_CLIENT) -o $(OUT_DEBUG_CLIENT) $(LIBS)
 
 server: $(LOGIC_SERVER)
-	mkdir -p $(OUT_DEBUG_DIR)
+	mkdir -p $(OUT_DEBUG_DIR_SERVER)
 	$(CC) $(FLAGS) $(INCLUDE) $(DEFINE) $(LOGIC_SERVER) -o $(OUT_DEBUG_SERVER) $(LIBS)
 	
 all: client server
